tests/baselines/reference/tsxElementResolution6.errors.txt
file.tsx(1,9): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
file.tsx(8,1): error TS2339: Property 'div' does not exist on type 'JSX.IntrinsicElements'.


==== file.tsx (2 errors) ====
    declare module JSX {
            ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	interface Element { }
    	interface IntrinsicElements { }
    }
    
    var div: any;
    // Still an error
    <div n='x' />;
    ~~~~~~~~~~~~~
!!! error TS2339: Property 'div' does not exist on type 'JSX.IntrinsicElements'.
    